# orca-plugin

./: .gitignore  Makefile.am  PKGBUILD  README.md  TODO  configure.ac  org.a11y.orca.application.gschema.xml  org.a11y.orca.global.gschema.xml  org.a11y.orca.gschema.xml  org.a11y.orca.profile.gschema.xml  org.gnome.orca.gschema.xml.in.in  run_pylint.sh
ci/: container_builds.yml
settingsPrototype/: ui-example.py  ui.py
src/: debug-2023-07-31-11:02:20.out  debug-2023-07-31-11:03:39.out  orca-setup.ui
src/orca/: Makefile.am  dynamic_api_manager.py  event_manager.py  gsetting.py  gsettings_manager.py  language_manager.py  orca.py  orca_state.py  plugin.py  plugin_system_manager.py  resource_manager.py  script_utilities.py  settings.py  settings_manager.py  signal_manager.py  speech.py  translation_context.py  translation_manager.py  ui_manager.py
src/orca/backends/: json_backend.py
src/orca/core-plugins/: Makefile.am
src/orca/core-plugins/ByeOrca/: ByeOrca.plugin  ByeOrca.py  Makefile.am
src/orca/core-plugins/HelloOrca/: HelloOrca.py  Makefile.am
src/orca/core-plugins/PluginManager/: Makefile.am  PluginManager.plugin  PluginManager.py  PluginManagerUi.py  PluginManagerUiListBox_tut.py
src/orca/plugins/: Makefile.am
src/orca/plugins/ByeOrca/: ByeOrca.py  Makefile.am
src/orca/plugins/CapsLockHack/: CapsLockHack.plugin  CapsLockHack.py  Makefile.am
src/orca/plugins/ClassicPreferences/: ClassicPreferences.plugin  ClassicPreferences.py  Makefile.am  orca_gui_prefs.py  orca_gui_profile.py
src/orca/plugins/Clipboard/: Clipboard.plugin  Clipboard.py  Makefile.am
src/orca/plugins/Date/: Date.plugin  Date.py  Makefile.am
src/orca/plugins/HelloOrca/: HelloOrca.plugin  HelloOrca.py  Makefile.am
src/orca/plugins/HelloWorld/: HelloWorld.plugin  HelloWorld.py  Makefile.am  test.py
src/orca/plugins/MouseReview/: Makefile.am  MouseReview.plugin  MouseReview.py
src/orca/plugins/PluginManager/: Makefile.am  PluginManager.plugin  PluginManager.py  PluginManagerUi.py  PluginManagerUiListBox.py  simple_box.py
src/orca/plugins/SelfVoice/: Makefile.am  SelfVoice.plugin  SelfVoice.py
src/orca/scripts/: default.py
(+20 files in other folders)
